refactor: fix display

--- a/html/biere-5.html
+++ b/html/biere-5.html
@@ -36,16 +36,16 @@
 
             <div class="card-panel">
                 <div class="row">
-                    <div class="col s6">
-                        <img src="https://images.punkapi.com/v2/29.png" alt="Image de la bière 5" class="responsive-img">
+                    <div class="col s5 m6">
+                        <img src="https://images.punkapi.com/v2/29.png" alt="Image de la bière 5" class="beer-image responsive-img">
                     </div>
-                    <div class="col s6">
-                        <div class="first-brewed">First brewed: 04/2013</div>
-                        <div class="ph">PH: 4.4</div>
-                        <div class="attenuation-level">Attenuation level: 79.7</div>
-                        <div class="boil-volume">Boil volume: 25 litres</div>
+                    <div class="col s7 m6">
+                        <p class="first-brewed"><b>First brewed:</b> 04/2013</p>
+                        <p class="ph"><b>PH:</b> 4.4</p>
+                        <p class="attenuation-level"><b>Attenuation level:</b> 79.7</p>
+                        <p class="boil-volume"><b>Boil volume:</b> 25 litres</p>
                         <div class="food-pairing">
-                            Food pairing:
+                            <b>Food pairing:</b>
                             <ul class="collection">
                                 <li class="collection-item">VArrabiata pasta</li>
                                 <li class="collection-item">Mulled cheddar</li>
@@ -59,7 +59,7 @@
                             </label>
                         </div>
                         <div class="degustation-date">
-                            Degustation date:
+                            <b>Degustation date:</b>
                             <input type="text" class="datepicker">
                         </div>
                     </div>
@@ -74,9 +74,12 @@
                             <i class="material-icons">star</i>
                             <i class="material-icons">star_border</i>
                         </div>
-                        <div class="description">10 Heads High is loosely based on our awesome 2011 Prototype beer Hops Kill Nazis. This is an uncompromising 7.8% Imperial Red Ale loaded high with American Hops. Think of this as an Imperial India Red Ale, or a super-charged version of 5am Saint. Either way this is a seriously good beer!</div>
-                        <div class="brewer-tips">Achieve the red colour by using the ratio of Caramalt, Crystal and Dark Crystal malts. The trick is to get the colour, without too much dried fruit character.</div>
-                        <div class="contributed-by">Sam Mason &lt;samjbmason&gt;</div>
+                        <div class="description">
+                            <b>Description:</b> 
+                            <p>10 Heads High is loosely based on our awesome 2011 Prototype beer Hops Kill Nazis. This is an uncompromising 7.8% Imperial Red Ale loaded high with American Hops. Think of this as an Imperial India Red Ale, or a super-charged version of 5am Saint. Either way this is a seriously good beer!</p>
+                        </div>
+                        <blockquote class="brewer-tips">Achieve the red colour by using the ratio of Caramalt, Crystal and Dark Crystal malts. The trick is to get the colour, without too much dried fruit character.</blockquote>
+                        <p class="contributed-by">Sam Mason &lt;samjbmason&gt;</p>
                     </div>
                 </div>
             </div>
