--- a/html/biere-21.html
+++ b/html/biere-21.html
@@ -31,175 +31,175 @@
 </nav>
 
 <div class="container">
+    <div class="section">
+        <div class="row">
 
-</div>
-<div class="section">
-    <div class="row">
+            <div class="col s6" style="border-right: 1px solid darkblue;">
 
-        <div class="col s4" style="border-right: 1px solid darkblue;">
+                <div class="row">
 
-            <div class="row">
+                    <div class="col s6">
+                        <img src="../media/biere-21.png" alt="Beer 21" class="responsive-img z-depth-2">
 
-                <div class="col s6">
-                    <img src="../media/biere-21.png" alt="Beer 21" class="responsive-img z-depth-2">
+                        <h6 class="center">
+                            Vice Bier
+                        </h6>
 
-                    <h6 class="center">
-                        Vice Bier
-                    </h6>
+                        <p class="center">
+                            <i class="material-icons">star</i>
+                            <i class="material-icons">star</i>
+                            <i class="material-icons">star</i>
+                            <i class="material-icons">star</i>
+                            <i class="material-icons">star_border</i>
+                        </p>
+                    </div>
 
-                    <p class="center">
-                        <i class="material-icons">star</i>
-                        <i class="material-icons">star</i>
-                        <i class="material-icons">star</i>
-                        <i class="material-icons">star</i>
-                        <i class="material-icons">star_border</i>
-                    </p>
-                </div>
+                    <div class="col s6">
+                        <h5><i class="material-icons">featured_play_list</i> Identity card</h5>
+                        <ul>
+                            <li>
+                                <p>
+                                    <strong>First brewed</strong>
+                                    <br>
+                                    04/2013
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <strong>PH</strong> 4
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <strong>Attenuation level</strong>
+                                    <br>
+                                    81.8
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <strong>Boil volume</strong>
+                                    <br>
+                                    25 litres
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <strong>Food pairing</strong>
+                                <ul>
+                                    <li>Citrus salad with balsamic dressing</li>
+                                    <li>Lobster</li>
+                                    <li>Ginger and orange cookies</li>
+                                </ul>
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <label>
+                                        <input type="checkbox" />
+                                        <span><strong>Already drunk ?</strong></span>
+                                    </label>
+                                    <input type="text" class="datepicker" placeholder="Select tasting date">
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
 
-                <div class="col s6">
-                    <h5><i class="material-icons">featured_play_list</i> Identity card</h5>
-                    <ul>
-                        <li>
-                            <p>
-                                <strong>First brewed</strong>
-                                <br>
-                                04/2013
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                <strong>PH</strong> 4
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                <strong>Attenuation level</strong>
-                                <br>
-                                81.8
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                <strong>Boil volume</strong>
-                                <br>
-                                25 litres
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                <strong>Food pairing</strong>
-                            <ul>
-                                <li>Citrus salad with balsamic dressing</li>
-                                <li>Lobster</li>
-                                <li>Ginger and orange cookies</li>
-                            </ul>
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                <label>
-                                    <input type="checkbox" />
-                                    <span><strong>Already drunk ?</strong></span>
-                                </label>
-                                <input type="text" class="datepicker" placeholder="Select tasting date">
-                            </p>
-                        </li>
-                    </ul>
-                </div>
+                    <div class="col">
 
-                <div class="col">
+                        <p>
+                            Our take on the classic German Kristallweizen. A clear German wheat beer, layers of bubblegum and vanilla perfectly balanced with the American and New Zealand hops.
+                        </p>
 
-                    <p>
-                        Our take on the classic German Kristallweizen. A clear German wheat beer, layers of bubblegum and vanilla perfectly balanced with the American and New Zealand hops.
-                    </p>
+                        <p>
+                            <strong>Brewers tips</strong>
+                            <br>
+                            Ferment at higher or lower temperatures to select the esters that will create clove- like or banana-like flavours.
+                        </p>
 
-                    <p>
-                        <strong>Brewers tips</strong>
-                        <br>
-                        Ferment at higher or lower temperatures to select the esters that will create clove- like or banana-like flavours.
-                    </p>
+                        <p>
+                            <strong>Contributed by</strong> Sam Mason
+                        </p>
 
-                    <p>
-                        <strong>Contributed by</strong> Sam Mason
-                    </p>
+                    </div>
 
                 </div>
 
             </div>
 
+            <div class="col s6">
+                <h5><i class="material-icons">book</i> Ingredients</h5>
+                <table class="highlight striped">
+                    <thead>
+                    <tr>
+                        <th>Malt</th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                    </thead>
+
+                    <tbody>
+
+                    <tr>
+                        <td></td>
+                        <td>Extra Pale</td>
+                        <td>2.69 kilograms</td>
+                    </tr>
+
+                    <tr>
+                        <td></td>
+                        <td>Wheat</td>
+                        <td>1.25 kilograms</td>
+                    </tr>
+
+                    <tr>
+                        <td></td>
+                        <td>Caramalt</td>
+                        <td>0.38 kilograms</td>
+                    </tr>
+
+                    </tbody>
+
+                    <thead>
+                    <tr>
+                        <th>Hops</th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                    </thead>
+
+                    <tbody>
+
+                    <tr>
+                        <td></td>
+                        <td>Extra Pale</td>
+                        <td>2.69 kilograms</td>
+                    </tr>
+
+                    <tr>
+                        <td></td>
+                        <td>Wheat</td>
+                        <td>1.25 kilograms</td>
+                    </tr>
+
+                    <tr>
+                        <td></td>
+                        <td>Caramalt</td>
+                        <td>0.38 kilograms</td>
+                    </tr>
+
+                    </tbody>
+
+                </table>
+
+                <div class="input-field col s6">
+                    <input id="last_name" type="text" class="validate">
+                    <label for="last_name">Commentaire</label>
+                </div>
+
+            </div>
+
         </div>
-
-        <div class="col s8">
-            <h5><i class="material-icons">book</i> Ingredients</h5>
-            <table class="highlight striped">
-                <thead>
-                <tr>
-                    <th>Malt</th>
-                    <th></th>
-                    <th></th>
-                </tr>
-                </thead>
-
-                <tbody>
-
-                <tr>
-                    <td></td>
-                    <td>Extra Pale</td>
-                    <td>2.69 kilograms</td>
-                </tr>
-
-                <tr>
-                    <td></td>
-                    <td>Wheat</td>
-                    <td>1.25 kilograms</td>
-                </tr>
-
-                <tr>
-                    <td></td>
-                    <td>Caramalt</td>
-                    <td>0.38 kilograms</td>
-                </tr>
-
-                </tbody>
-
-                <thead>
-                <tr>
-                    <th>Hops</th>
-                    <th></th>
-                    <th></th>
-                </tr>
-                </thead>
-
-                <tbody>
-
-                <tr>
-                    <td></td>
-                    <td>Extra Pale</td>
-                    <td>2.69 kilograms</td>
-                </tr>
-
-                <tr>
-                    <td></td>
-                    <td>Wheat</td>
-                    <td>1.25 kilograms</td>
-                </tr>
-
-                <tr>
-                    <td></td>
-                    <td>Caramalt</td>
-                    <td>0.38 kilograms</td>
-                </tr>
-
-                </tbody>
-
-            </table>
-
-            <label>
-                <textarea class="m4" rows="10" placeholder="Write what you want..."></textarea>
-            </label>
-
-        </div>
-
     </div>
 </div>
 
