--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
 		<!-- Compiled and minified CSS -->
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+		<link 
+				rel="stylesheet" 
+				href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
 
 		<!-- Compiled and minified JavaScript -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 		<link rel="stylesheet" href="./style/index.css" />
 	</head>
-
 	<body>
 		<h1>Catalogue des bières</h1>
 		<div id="liste-bieres">
@@ -171,5 +171,4 @@
 			</div>
 		</div>
 	</body>
-
 </html>
