--- a/html/biere-26.html
+++ b/html/biere-26.html
@@ -54,6 +54,7 @@
                 </label>
               </form>
               <h6>Date de dégustation</h6>
+              <form><input type="text" class="datepicker" /></form>
             </div>
           </div>
           <div>
@@ -130,8 +131,6 @@
         <i class="large material-icons">mode_edit</i>
       </a>
     </div>
-    <footer class="page-footer center-align">
-        Vo Lam Nhat Khuong - FILA2
-    </footer>
+    <footer class="page-footer center-align">Vo Lam Nhat Khuong - FILA2</footer>
   </body>
 </html>
