--- a/html/biere-23.html
+++ b/html/biere-23.html
@@ -1,111 +1,160 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<!-- Compiled and minified CSS -->
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-		/>
 
-		<!-- Compiled and minified JavaScript -->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-		<link rel="stylesheet" href="./style/biere-23.css" />
-    </head>
-    <body>
-        <nav>
-            <div class="nav-wrapper">
-                <h3 class="center">Storm</h3>
-            </div>
-        </nav>
-        <div class="row">
-            <div class="col s5">
-                <div class="row">
-                    <img src="https://images.punkapi.com/v2/23.png" class="beer-img">
+<head>
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link rel="stylesheet" href="./style/biere-23.css" />
+</head>
+
+<body>
+    <nav>
+        <div class="nav-wrapper">
+            <h3 class="center">Storm</h3>
+        </div>
+    </nav>
+    <div class="row">
+        <div class="col s5 offset-s1">
+            <div class="row">
+                <div class="col">
+                    <img src="https://images.punkapi.com/v2/23.png" class="beer-img" width="100px">
+                </div>
+                <div class="col">
+                    <p>first brewed: 12/2007</p>
+                    <p>ph: 4.4</p>
+                    <p>attenuation level: 86</p>
+                    <p>boil volume: 25</p>
+                    <p>food Pairing :</p>
+                    <ul class="collection">
+                        <li class="collection-item">Oysters</li>
+                        <li class="collection-item">Hickory smoked ham</li>
+                        <li class="collection-item">Rocky Road</li>
+                    </ul>
+                    <p>
+                        <label>
+                            <input type="checkbox" />
+                            <span>Déjà bu</span>
+                        </label>
+                    </p>
+                    <p>Date de dégustation</p>
+                    <input type="text" class="datepicker">
                 </div>
             </div>
-            <div class="col s5">
-                <table class="responsive-table striped">
-                    <thead>
-                      <tr>
-                          <th>Malt</th>
-                      </tr>
-                    </thead>
-            
-                    <tbody>
-                      <tr>
+            <div class="row">
+                <i class="material-icons">star</i>
+                <i class="material-icons">star</i>
+                <i class="material-icons">star</i>
+                <i class="material-icons">star</i>
+                <i class="material-icons">star</i>
+            </div>
+            <div class="row">
+                <p>Description: "Dark and powerful Islay magic infuses this tropical sensation of an IPA. Using the
+                    original Punk IPA as a base, we boosted the ABV to 8% giving it some extra backbone to stand up to
+                    the peated smoke imported directly from Islay.
+            </div>
+        </div>
+
+        <div class="col s5">
+            <table class="responsive-table striped">
+                <thead>
+                    <tr>
+                        <th>Malt</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
                         <td></td>
                         <td>Extra Pale</td>
                         <td>5.8</td>
-                      </tr>
-                      <tr>
+                    </tr>
+                    <tr>
                         <td>Hops</td>
                         <td></td>
                         <td></td>
-                      </tr>
-                      <tr>
+                    </tr>
+                    <tr>
                         <td></td>
                         <td>Ahtanum</td>
                         <td>17.5</td>
-                      </tr>
-                      <tr>
+                    </tr>
+                    <tr>
                         <td></td>
                         <td>Chinook</td>
                         <td>15</td>
-                      </tr>
-                      <tr>
+                    </tr>
+                    <tr>
                         <td></td>
                         <td>Crystal</td>
                         <td>17.5</td>
-                      </tr>
-                      <tr>
+                    </tr>
+                    <tr>
                         <td></td>
                         <td>Chinook</td>
                         <td>17.5</td>
-                      </tr>
-                      <tr>
+                    </tr>
+                    <tr>
                         <td></td>
                         <td>Crystal</td>
                         <td>17.5</td>
-                      </tr>
-                      <tr>
+                    </tr>
+                    <tr>
                         <td></td>
                         <td>Chinook</td>
                         <td>27.5</td>
-                      </tr>
-                      <tr>
+                    </tr>
+                    <tr>
                         <td></td>
                         <td>Motueka</td>
                         <td>17.5</td>
-                      </tr>
-                      <tr>
+                    </tr>
+                    <tr>
                         <td>Yeast</td>
                         <td></td>
                         <td></td>
-                      </tr>
-                      <tr>
+                    </tr>
+                    <tr>
                         <td></td>
                         <td>Wyeast 1056 - American Ale™</td>
                         <td></td>
-                      </tr>
-                      
-                    </tbody>
-                  </table>
+                    </tr>
+
+                </tbody>
+            </table>
+
+            <div class="row">
+                <form class="col s12">
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <textarea id="textarea1" class="materialize-textarea"></textarea>
+                            <label for="textarea1">Textarea</label>
+                        </div>
+                    </div>
+                </form>
             </div>
-            <div class="col s1">
+
+        </div>
+        <!-- <div class="col s1">
                 <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
-            </div>
+            </div> -->
+    </div>
+    <div class="row">
+        <div class="center">
+            <a class="waves-effect waves-light btn" href="./biere-22.html">Précédent</a>
+            <a class="waves-effect waves-light btn" href="./biere-24.html">Suivant</a>
         </div>
-        <div class="row">
-            <div class="center">
-                <a class="waves-effect waves-light btn">Précédent</a>
-                <a class="waves-effect waves-light btn">Suivant</a>
-            <div>
-        </div>
+    </div>
 
     <footer class="page-footer">
-            <div class="container center ">
-                Delphine FILA2
-            </div>
+        <div class="container center">
+            Delphine FILA2
+        </div>
     </footer>
 </body>
+
 </html>
