Beer info and img

--- a/html/biere-14.html
+++ b/html/biere-14.html
@@ -21,11 +21,45 @@
         </header>
 
         <main>
-            <h1></h1>
+            <h1>Alpha Dog</h1>
             <div class="container">
                 <div class="row">
-                    <div class="col s6"></div>
-                    <div class="col s6">
+                    <div class="col s3">
+                        <img class="beer-img" src="https://images.punkapi.com/v2/14.png">
+                    </div>
+                    <div class="col s4 beer-info">
+                        <div>
+                            <label>first_brewed</label>
+                        </div>
+                        <div>
+                            <label>PH</label>
+                        </div>
+                        <div>
+                            <label>Attenuation level</label>
+                        </div>
+                        <div>
+                            <label>Boil volume</label>
+                        </div>
+                        <div>
+                            <label>Food pairing</label>
+                            <ul>
+                                <li>food_pairing</li>
+                                <li>food_pairing</li>
+                                <li>food_pairing</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <label>
+                                <input type="checkbox" class="filled-in" checked="checked" />
+                                <span>Déjà bu</span>
+                            </label>
+                        </div>
+                        <div>
+                            <label>Date de dégustation</label>
+                            <input type="text" class="datepicker">
+                        </div>
+                    </div>
+                    <div class="col s5">
                         <table class="striped">
                             <thead>
                                 <tr>
