--- a/html/biere-29.html
+++ b/html/biere-29.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -13,7 +13,7 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <link rel="stylesheet" href="../style/biere-5.css">
+    <link rel="stylesheet" href="../style/biere-29.css">
 </head>
 
 <body>
@@ -148,8 +148,7 @@
     </div>
 
     <div class="row center-align">
-        <a href="./biere-4.html" class="btn">Previous</a>
-        <a href="./biere-6.html" class="btn">Next</a>
+        <a href="./biere-28.html" class="btn">Previous</a>
     </div>
 
     <div class="fixed-action-btn">
