--- a/html/biere-21.html
+++ b/html/biere-21.html
@@ -172,29 +172,47 @@
 
                     <tr>
                         <td></td>
-                        <td>Extra Pale</td>
-                        <td>2.69 kilograms</td>
+                        <td>Waimea</td>
+                        <td>2.5 grams</td>
                     </tr>
-
                     <tr>
                         <td></td>
-                        <td>Wheat</td>
-                        <td>1.25 kilograms</td>
+                        <td>Amarillo</td>
+                        <td>2.5 grams</td>
                     </tr>
-
                     <tr>
                         <td></td>
-                        <td>Caramalt</td>
-                        <td>0.38 kilograms</td>
+                        <td>Nelson Sauvin</td>
+                        <td>2.5 grams</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Motueka</td>
+                        <td>2.5grams</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>imcoe</td>
+                        <td>6 grams</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Citra</td>
+                        <td>6 grams</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Waimea</td>
+                        <td>6 grams</td>
                     </tr>
 
                     </tbody>
 
                 </table>
 
-                <div class="input-field col s6">
-                    <input id="last_name" type="text" class="validate">
-                    <label for="last_name">Commentaire</label>
+                <div class="input-field col">
+                    <input id="comment" type="text" class="validate" value="That's a absolutely wonderful beer !">
+                    <label for="comment">Comment</label>
                 </div>
 
             </div>
@@ -203,6 +221,15 @@
     </div>
 </div>
 
+<footer class="page-footer orange darken-3 center">
+    <div class="container">
+        Mathieu (aka. Maffiou) - FIL A2
+        <br>
+        <br>
+    </div>
+</footer>
+
+</body>
 
 <script>
     document.addEventListener('DOMContentLoaded', function() {
@@ -211,5 +238,4 @@
     });
 </script>
 
-</body>
 </html>
