Adding Beer desc

--- a/html/biere-10.html
+++ b/html/biere-10.html
@@ -63,9 +63,18 @@
 
                     <h6 class="no-margin">Food pairing</h6>
                     <ul>
-                        <li>Warm blackberry pie</li>
-                        <li>Vinegar doused fish and chips</li>
-                        <li>Aromatic korma curry with lemon and garlic naan</li>
+                        <li><i class="material-icons">bubble_chart</i> Warm blackberry pie</li>
+                        <li><i class="material-icons">bubble_chart</i> Vinegar doused fish and chips</li>
+                        <li><i class="material-icons">bubble_chart</i> Aromatic korma curry with lemon and garlic naan</li>
+                    </ul>
+
+                    <label class="black-txt">
+                        <input type="checkbox" />
+                        <span>Already drank</span>
+                    </label>
+                    <h6 class="no-margin">Degustation date</h6>
+                    <ul>
+                        <li><input type="text" class="datepicker" format="dd/mm/yyyy"></li>
                     </ul>
                 </div>
 
@@ -172,12 +181,42 @@
                 </div>
             </div>
 
+            <!-- DESCRIPTION & NOTE-->
+            <div class="row">
+                <div class="col s4">
+                    <h6>Single Hop IPA Series - 2011.</h6>
+                            <ul>
+                                <li><i class="material-icons">star</i><i class="material-icons">star</i>
+                                    <i class="material-icons">star_half</i>
+                                    <i class="material-icons">star_border</i><i class="material-icons">star_border</i></li>
+                            </ul>
+                    <p>
+                        Good old Bramling Cross is elegant, refined, assured, (boring) and understated. Understated that is unless you hop the living 
+                        daylights out of a beer with it. This is Bramling Cross re-invented and re-imagined, and shows just what can be done with English hops 
+                        if you use enough of them. Poor Bramling Cross normally gets lost in a woeful stream of conformist brown ales made by sleepy cask ale brewers. 
+                        But not anymore. This beer shows that British hops do have some soul, and is a fruity riot of blackberries, pears, and plums. 
+                        Reminds me of the bramble, apple and ginger jam my grandmother used to make.
+                    </p>
+
+                    <h6 class="no-margin">Brewers tip</h6>
+                        <ul>
+                            <li>Getting good Bramling Cross is key. Most English hops are in leaf form (not pelletised), 
+                                so getting fresh hops close to harvest (September) will give this beer the right amount of dark berry intensity.</li>
+                        </ul>
+                    <h6 class="no-margin">Contributed by</h6>
+                        <ul>
+                            <li>Sam Mason <samjbmason></li>
+                        </ul>
+                </div>
+            </div>
+
             <!-- Boutons Précédent/Suivant -->
             <div class="row">
                 <div class="col s2 offset-s4"><a class="waves-effect waves-light btn blue" href="./biere-9.html">Précédent</a></div>
                 <div class="col s2"><a class="waves-effect waves-light btn blue" href="./biere-11.html">Suivant</a></div>
             </div>
         </div>
+
         
         
         <footer class="page-footer blue">
