--- a/html/biere-10.html
+++ b/html/biere-10.html
@@ -208,6 +208,13 @@
                             <li>Sam Mason <samjbmason></li>
                         </ul>
                 </div>
+
+                <div class="col s6 offset-s2">
+                    <div class="input-field col s12">
+                        <textarea id="textarea1" class="materialize-textarea"></textarea>
+                        <label for="textarea1">Comment</label>
+                      </div>
+                </div>
             </div>
 
             <!-- Boutons Précédent/Suivant -->
