--- a/html/biere-23.html
+++ b/html/biere-23.html
@@ -15,7 +15,10 @@
 <body>
     <nav>
         <div class="nav-wrapper">
-            <h3 class="center">Storm</h3>
+            <a class="center">Storm</a>
+            <ul id="nav-mobile" class="left hide-on-med-and-down">
+                <li> <a href="../index.html"><i class="material-icons">arrow_back</i></a></li>
+            </ul>
         </div>
     </nav>
     <div class="row">
@@ -53,7 +56,7 @@
                 <i class="material-icons">star</i>
             </div>
             <div class="row">
-                <p>Description: "Dark and powerful Islay magic infuses this tropical sensation of an IPA. Using the
+                <p>Description: Dark and powerful Islay magic infuses this tropical sensation of an IPA. Using the
                     original Punk IPA as a base, we boosted the ABV to 8% giving it some extra backbone to stand up to
                     the peated smoke imported directly from Islay.
             </div>
